@@ -5,6 +5,7 @@
 - Fixed zooming in songs with multiple time signatures
 - Made zooming smoother by removing unneeded render
 - Fixed removing empty tracks in imported midis
+- Do not accept empty track names
  
  1.1b6
 - fixed crash when removing tempo events
